# code-split

./: .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Dockerfile  Makefile  README.md  code-ranker.toml  code-split.toml  dist-workspace.toml  pyproject.toml
.github/scripts/: code_ranker_comment.py  code_split_comment.py
.github/workflows/: build-setup.yml  ci.yml  crates-io.yml  docker.yml  pages.yml  pr-report.yml  pypi.yml  release.yml  verify.yml
contrib/: ci.md  unit-tests.md
crates/code-ranker-cli/: Cargo.toml
crates/code-ranker-cli/src/: analyze.rs  check.rs  cli.rs  git.rs  logger.rs  main.rs  pipeline.rs  presets.rs  recommend.rs  report.rs
crates/code-ranker-cli/src/config/: ignore.rs  load.rs  model.rs  rules.rs  violations.rs
crates/code-ranker-cli/src/plugin/: mod.rs
crates/code-ranker-cli/tests/: e2e.rs
crates/code-ranker-complexity/: Cargo.toml
crates/code-ranker-complexity/src/: lib.rs
crates/code-ranker-graph/: Cargo.toml
crates/code-ranker-graph/src/: attrs.rs  cycles.rs  finalize.rs  hk.rs  level_graph.rs  lib.rs  relativize.rs  snapshot.rs  stats.rs
crates/code-ranker-plugin-api/: Cargo.toml
crates/code-ranker-plugin-api/src/: edge.rs  graph.rs  level.rs  lib.rs  log.rs  node.rs  plugin.rs
crates/code-ranker-plugin-javascript/: Cargo.toml
crates/code-ranker-plugin-javascript/sample/: code-ranker-report.json  code-ranker.toml
crates/code-ranker-plugin-javascript/sample/src/: a.js  a.test.js  b.js  c.js  complex.js  dynamic.js  m1.js  m2.js
crates/code-ranker-plugin-javascript/src/: lib.rs
crates/code-ranker-plugin-python/: Cargo.toml
crates/code-ranker-plugin-python/sample/: code-ranker-report.json  code-ranker.toml
crates/code-ranker-plugin-python/sample/pkg/: __init__.py  a.py  b.py  c.py  chain1.py  chain2.py  chain3.py  complex.py
crates/code-ranker-plugin-python/sample/tests/: test_pkg.py
crates/code-ranker-plugin-python/src/: lib.rs
crates/code-ranker-plugin-rust/: Cargo.toml
crates/code-ranker-plugin-rust/sample/: Cargo.toml  code-ranker-report.json  code-ranker.toml
crates/code-ranker-plugin-rust/sample/helper/: Cargo.toml
crates/code-ranker-plugin-rust/sample/helper/src/: gadget.rs  lib.rs  widget.rs
crates/code-ranker-plugin-rust/sample/src/: a.rs  b.rs  c.rs  chain.rs  complex.rs  cross.rs  cycle_examples.rs  derives.rs  foo.rs  lib.rs  macros.rs
crates/code-ranker-plugin-rust/sample/src/chain/: one.rs  three.rs  two.rs
crates/code-ranker-plugin-rust/sample/src/cycle_examples/: reex_hub.rs  reex_spoke.rs  sup_loose.rs  sup_parent.rs
crates/code-ranker-plugin-rust/sample/src/cycle_examples/sup_loose/: child.rs
crates/code-ranker-plugin-rust/sample/src/cycle_examples/sup_parent/: child.rs
crates/code-ranker-plugin-rust/sample/src/foo/: bar.rs
crates/code-ranker-plugin-rust/sample/src/relocated/: custom.rs
crates/code-ranker-plugin-rust/sample/tests/: integration.rs
crates/code-ranker-plugin-rust/src/: crate_graph.rs  internal.rs  lib.rs  module_graph.rs
crates/code-ranker-plugin-typescript/: Cargo.toml
crates/code-ranker-plugin-typescript/sample/: code-ranker-report.json  code-ranker.toml  tsconfig.json
crates/code-ranker-plugin-typescript/sample/src/: a.test.ts  a.ts  b.ts  chain1.ts  chain2.ts  chain3.ts  complex.ts  lazy.ts  types.ts  util.ts
crates/code-ranker-plugin-typescript/src/: lib.rs
crates/code-ranker-viewer/: Cargo.toml
crates/code-ranker-viewer/src/: lib.rs
crates/code-ranker-viewer/src/assets/: app.js  base.css  diff.js  export-popup.js  export.css  grouping.js  index.html  layout.js  map-interactions.js  map-render.js  map-svg.css  map.css  modal-content.js  modal.css  modal.js  nav.js  node-popup.js  node-table.js  panzoom.js  schema.js  snap-controls.js  snap.css  source-links.js  summary.js  tables.css  tooltip.js  ui.js  utils.js  view-state.js
crates/code-split-cli/: Cargo.toml
crates/code-split-cli/src/: analyze.rs  check.rs  cli.rs  config.rs  git.rs  logger.rs  main.rs  pipeline.rs  presets.rs  recommend.rs  report.rs
crates/code-split-cli/src/assets/: app.js  diagram.js  diff.js  export-popup.js  graphviz.umd.js  index.css  index.html  layout.js  modal.js  nav.js  node-table.js  panzoom.js  state.js  summary.js  ui.js  utils.js
crates/code-split-cli/src/config/: ignore.rs  load.rs  mod.rs  model.rs  rules.rs  violations.rs
crates/code-split-cli/src/plugin/: javascript.rs  mod.rs  python.rs  rust.rs
crates/code-split-cli/tests/: e2e.rs
crates/code-split-complexity/: Cargo.toml
crates/code-split-complexity/examples/: bench.rs  debug_spaces.rs
crates/code-split-complexity/src/: lib.rs
crates/code-split-core/: Cargo.toml
crates/code-split-core/src/: builder.rs  cycles.rs  diff.rs  graph.rs  hk.rs  lib.rs  semantic.rs  snapshot.rs  stats.rs
crates/code-split-plugin/: Cargo.toml
crates/code-split-plugin-javascript/: Cargo.toml
crates/code-split-plugin-javascript/src/: lib.rs
crates/code-split-plugin-python/: Cargo.toml
crates/code-split-plugin-python/src/: lib.rs
crates/code-split-plugin-rust/: Cargo.toml
crates/code-split-plugin-rust/sample/: code-split-report.json
crates/code-split-plugin-rust/src/: crate_graph.rs  ids.rs  internal.rs  lib.rs  module_graph.rs
crates/code-split-plugin/src/: complexity.rs  finalize.rs  lib.rs  logger.rs
crates/code-split-sema/: Cargo.toml
crates/code-split-sema/src/: lib.rs
crates/code-split-syn/: Cargo.toml
crates/code-split-syn/examples/: bench_complexity.rs
crates/code-split-syn/src/: crate_graph.rs  lib.rs  module_graph.rs
crates/code-split-viewer/: Cargo.toml
crates/code-split-viewer/src/: lib.rs
crates/code-split-viewer/src/assets/: app.js  diagram.js  diff.js  export-popup.js  grouping.js  index.css  index.html  layout.js  map-interactions.js  map-render.js  map-svg.css  map.css  modal.js  nav.js  node-popup.js  node-table.js  panzoom.js  state.js  summary.js
docs/: CLI.md  COMPARISON.md  DESIGN.md  ERRORS.md  NODE_SCHEMA.md  PRD.md  adding-a-custom-file-metric.md  ai-skill.md  comparison.md  config.md  e2e.md  node_schema.md
docs/code-ranker-cli/: CLI.md  (+4 more)
(+82 files in other folders)
