[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.11"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/ffedoroff/code-split"
keywords = ["dependency-graph", "coupling", "refactoring", "code-quality", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
code-split-core = { path = "crates/code-split-core", version = "0.1.0-alpha.11" }
code-split-syn = { path = "crates/code-split-syn", version = "0.1.0-alpha.11" }
code-split-sema = { path = "crates/code-split-sema", version = "0.1.0-alpha.11" }
code-split-complexity = { path = "crates/code-split-complexity", version = "0.1.0-alpha.11" }

anyhow = "1.0"
globset = "0.4"
toml = "0.8"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
thiserror = "1"
which = "6"

rust-code-analysis = { package = "rust-code-analysis-code-split", version = "0.0.26-cs.0" }
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2"

ra_ap_hir            = "=0.0.333"
ra_ap_ide            = "=0.0.333"
ra_ap_ide_db         = "=0.0.333"
ra_ap_load-cargo     = { package = "ra_ap_load-cargo", version = "=0.0.333" }
ra_ap_project_model  = "=0.0.333"
ra_ap_syntax         = "=0.0.333"
ra_ap_vfs            = "=0.0.333"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
