[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.0.0-alpha.3"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/ffedoroff/code-split"
keywords = ["dependency-graph", "coupling", "refactoring", "code-quality", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
code-split-graph = { path = "crates/code-split-graph", version = "1.0.0-alpha.3" }
code-split-plugin = { path = "crates/code-split-plugin", version = "1.0.0-alpha.3" }
code-split-plugin-rust = { path = "crates/code-split-plugin-rust", version = "1.0.0-alpha.3" }
code-split-plugin-python = { path = "crates/code-split-plugin-python", version = "1.0.0-alpha.3" }
code-split-plugin-javascript = { path = "crates/code-split-plugin-javascript", version = "1.0.0-alpha.3" }
code-split-viewer = { path = "crates/code-split-viewer", version = "1.0.0-alpha.3" }

anyhow = "1.0"
globset = "0.4"
toml = "1"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
thiserror = "1"
which = "8"

rust-code-analysis = { package = "rust-code-analysis-code-split", version = "0.0.26-cs.0" }
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
