[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.0.0-alpha.4"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/ffedoroff/code-ranker"
keywords = ["dependency-graph", "coupling", "refactoring", "code-quality", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
code-ranker-graph = { path = "crates/code-ranker-graph", version = "1.0.0-alpha.4" }
code-ranker-plugin-api = { path = "crates/code-ranker-plugin-api", version = "1.0.0-alpha.4" }
code-ranker-complexity = { path = "crates/code-ranker-complexity", version = "1.0.0-alpha.4" }
code-ranker-plugin-rust = { path = "crates/code-ranker-plugin-rust", version = "1.0.0-alpha.4" }
code-ranker-plugin-python = { path = "crates/code-ranker-plugin-python", version = "1.0.0-alpha.4" }
code-ranker-plugin-javascript = { path = "crates/code-ranker-plugin-javascript", version = "1.0.0-alpha.4" }
code-ranker-plugin-typescript = { path = "crates/code-ranker-plugin-typescript", version = "1.0.0-alpha.4" }
code-ranker-viewer = { path = "crates/code-ranker-viewer", version = "1.0.0-alpha.4" }

anyhow = "1.0"
globset = "0.4"
toml = "1"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
thiserror = "1"
which = "8"

rust-code-analysis = { package = "rust-code-analysis-code-split", version = "0.0.26-cs.0" }
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
