[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "code-ranker"
dynamic = ["version"]   # source of truth: Cargo.toml workspace.package.version (via maturin)
description = "Polyglot structural-analysis platform: extract dependency graphs, visualize coupling, track architectural drift."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Roman Fedorov", email = "Roman.Fedorov@constructor.tech" }]
keywords = ["dependency-graph", "coupling", "refactoring", "code-quality", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/ffedoroff/code-ranker"
Issues = "https://github.com/ffedoroff/code-ranker/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/code-ranker-cli/Cargo.toml"
strip = true
