[package]
name = "code-ranker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Ranker CLI — pluggable multi-language structural analysis platform."

[[bin]]
name = "code-ranker"
path = "src/main.rs"

[dependencies]
code-ranker-graph = { workspace = true }
code-ranker-complexity = { workspace = true }
code-ranker-plugin-api = { workspace = true }
code-ranker-plugin-rust = { workspace = true }
code-ranker-plugin-python = { workspace = true }
code-ranker-plugin-javascript = { workspace = true }
code-ranker-plugin-typescript = { workspace = true }
code-ranker-viewer = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
