[package]
name = "code-ranker-complexity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Central, language-agnostic complexity metrics for Code Ranker (by file extension, rust-code-analysis)."

[dependencies]
code-ranker-plugin-api = { workspace = true }
code-ranker-graph = { workspace = true }
rust-code-analysis = { workspace = true }
# Rust-only: locate `#[cfg(test)]` / `#[test]` items so their lines are excluded
# from the (otherwise language-agnostic) metrics — production code only.
syn = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
