[package]
name = "code-ranker-plugin-javascript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Ranker JavaScript/TypeScript plugin: tree-sitter module/import graph."
# The e2e fixture project ships next to src/ but is not part of the published crate.
exclude = ["sample"]

[dependencies]
code-ranker-plugin-api = { workspace = true }
code-ranker-graph = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
