[package]
name = "code-ranker-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Ranker HTML viewer: self-contained interactive report with embedded snapshots."

[dependencies]
code-ranker-graph = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
