[package]
name = "code-split"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split CLI — pluggable multi-language structural analysis platform."

[[bin]]
name = "code-split"
path = "src/main.rs"

[dependencies]
code-split-core = { workspace = true }
code-split-syn = { workspace = true }
code-split-sema = { workspace = true }
code-split-complexity = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
walkdir = { workspace = true }
