[package]
name = "code-split"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split CLI — pluggable multi-language structural analysis platform."

[[bin]]
name = "code-split"
path = "src/main.rs"

[dependencies]
code-split-graph = { workspace = true }
code-split-plugin = { workspace = true }
code-split-plugin-rust = { workspace = true }
code-split-plugin-python = { workspace = true }
code-split-plugin-javascript = { workspace = true }
code-split-viewer = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
