[package]
name = "code-split-plugin-javascript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split JavaScript/TypeScript plugin: tree-sitter module/import graph."

[dependencies]
code-split-graph = { workspace = true }
code-split-plugin = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
rust-code-analysis = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
