[package]
name = "code-split-plugin-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split Python plugin: tree-sitter module/import graph."

[dependencies]
code-split-graph = { workspace = true }
code-split-plugin = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
rust-code-analysis = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
