[package]
name = "code-split-plugin-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split Rust plugin: cargo metadata + syn module/crate graph."

[dependencies]
code-split-graph = { workspace = true }
code-split-plugin = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
rust-code-analysis = { workspace = true }
which = { workspace = true }
