[package]
name = "code-split-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared plugin layer for Code Split: complexity metrics, file-graph finalize, logging."

[dependencies]
code-split-graph = { workspace = true }
rust-code-analysis = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
