[package]
name = "code-split-sema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Semantic-stage analyzer for Code Split: rust-analyzer-backed call graph."

[dependencies]
code-split-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

ra_ap_hir = { workspace = true }
ra_ap_ide = { workspace = true }
ra_ap_ide_db = { workspace = true }
ra_ap_load-cargo = { workspace = true }
ra_ap_project_model = { workspace = true }
ra_ap_syntax = { workspace = true }
ra_ap_vfs = { workspace = true }
