[package]
name = "code-split-syn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Syntactic-stage analyzer for Code Split: cargo_metadata + syn."

[dependencies]
code-split-core = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
walkdir = "2"
